--- a/proiect/assets/css/style.css
+++ b/proiect/assets/css/style.css
@@ -251,7 +251,6 @@ body {
   max-width: 500px;
   margin: auto;
   text-align: left;
-  margin: 10px auto;
 }
 #formjob label{
   display: inline-block;
@@ -269,4 +268,9 @@ body {
   font-weight: bold;
   border-radius: 10px;
 } 
-  
+#formjob{
+  margin-top: 30px;
+  background-color: rgb(218, 218, 218);
+  border-radius: 20px;
+  padding-left: 10px;
+}
